# jitsi-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/databases/: __init__.py  redis.py  sql.py
app/models/: room.py  status.py  token.py
app/models/sql/: room.py
app/remote/: scp.py
app/routers/: __init__.py  admin.py  room.py
app/services/: admin.py  room.py
