[tool.poetry]
name = "jitsi-api"
version = "0.1.0"
description = ""
authors = ["suk-6 <me@suk.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
redis-om = "^0.3.2"
pyjwt = "^2.9.0"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.9"
paramiko = "^3.4.1"
scp = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
